# FastAPI-App

./: .gitignore  Readme.md  day10_file_handling_modules.ipynb  day8_control_flow_functions.ipynb  day9_advanced_functions_comprehensions.ipynb  file.ipynb  file.txt  invoice_table_extractor.py  main.py  model_run.py  notebook.ipynb  pyproject.toml
