[project]
name = "model-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "huggingface-hub>=0.35.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
]

# Use double square brackets for an array of tables
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
